# linux

./: .gitignore
client/: .ccls  Makefile
client/src/: main.cpp  udp.cpp
module/: .Module.symvers.cmd  .modules.order.cmd  .opa_printk.ko.cmd  .opa_printk.mod.cmd  .opa_printk.mod.o.cmd  .opa_printk.o.cmd  Makefile  modules.order  opa_printk.c  opa_printk.ko  opa_printk.mod
module/src/: opa_printk.cpp
python/: pytcp.py  pyudp.py  tcpclient.py  tcpserver.py  udplistner.py  udpsender.py
riscv/tut1/: .ccls  .clang-format  Makefile
riscv/tut1/inc/: print.h
riscv/tut1/src/: main.cpp  print.cpp
script_wo_sudo_unsafe/: instruction.md  s  script  script.sh  start  start.c
server/: Makefile
server/inc/: udp.h
server/src/: main.cpp  udp.cpp
stdutil/: Instruction.txt  Makefile  gdb_qemu_instr.txt  gdb_script
stdutil/src/: main.cpp
tcp/client/: remote_gdb.txt
tcp/client/inc/: main.h  tcp.h  udp.h
tcp/client/src/: main.cpp  tcp.cpp
tcp/serverpi/: Makefile  example.html  head.c  qemu_instruction.txt
tcp/serverpi/inc/: tcp.h
tcp/serverpi/src/: main.cpp  tcp.cpp  tcp.cpp.orig
thread/: Makefile
thread/inc/: udp.h
thread/src/: main.cpp  udp.cpp
tutfork/: Makefile
tutfork/src/: main.cpp
tutgit/: Makefile
tutgit/inc/: main.h
tutgit/src/: main.cpp
udp/client/src/: main.cpp
udp/server/src/: main.cpp
usb_com/: .ccls  .clang-format  .gdbinit  CMakeLists.txt  build.sh  logTemperature.csv
usb_com/src/: main.cpp
